# dynwinrt-js

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
samples/: apis.ts  array_struct.ts  ocr.ts  picker.ts  test_register_interface.ts
src/: astr.rs  lib.rs  value_type.rs  winrt_service.rs
