
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "jswinrt_rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "tokio_rt"] }
napi-derive = "3.0.0"
dynwinrt = { path = "../dynwinrt" }
windows-future = "0.3.2"
windows-string = "0.0.0"
pollster = "0.4.0"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Packaging_Appx",
    "Web_Http",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_WinRT",
    "Win32_System_Com",
    "Foundation",
    "Web_Http",
    "Devices_Geolocation",
]



[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
